# TRUGS

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  GLOSSARY.md  Makefile  NOTICE  PLAN_1544_byte_identical_round_trip.md  PLAN_1544_pr_b_formatting.md  README.md  SECURITY.md  folder.trug.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  compliance-baseline.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  compliance.yml
EXAMPLES/: README.md
EXAMPLES/knowledge/: README.md  complex.json  medium.json  simple.json
EXAMPLES/living/: README.md  complex.json  medium.json  simple.json
EXAMPLES/memory/: session.trug.json
EXAMPLES/nested/: README.md  complex.json  medium.json  simple.json
EXAMPLES/research/: complete.json  minimal.json
EXAMPLES/web/: README.md  complete.json  complex.json  medium.json  minimal.json
EXAMPLES/writer/: README.md  complete.json  complex.json  medium.json  minimal.json
PAPER/: README.md  trugs.bbl  trugs.bib  trugs.tex
REFERENCE/: PAPER_dark_code.md  PAPER_how_to_code_with_trugs.md  README.md  STANDARD_dark_code_compliance.md
STUDIES/STUDY_001_medical_evidence_synthesis/: PAPER_methodology.md  README.md  heart_health_series.trug.json
STUDIES/STUDY_002_executable_semantic_graph_genealogy/: PAPER_genealogy.md  README.md
TRUGS_LANGUAGE/: CHEATSHEET.md  README.md  SPEC_examples.md  SPEC_grammar.md  SPEC_vocabulary.md  language.trug.json
TRUGS_PROTOCOL/: BRANCHES.md  CORE.md  SCHEMA.md  SPEC_fundamentals.md  SPEC_validation.md
tools/: build_language_trug.py  compliance_check.py  memory.py  memory_audit.py  memory_import.py  memory_render.py  tdelete.py  test_build_language_trug.py  test_compliance_check.py  test_memory.py  test_memory_audit.py  test_memory_import.py  test_memory_render.py  test_trl.py  test_validate.py  tget.py  trl.py  tunlink.py  tupdate.py  validate.py
