[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trugs"
version = "1.2.1"
description = "TRUGS — Traceable Recursive Universal Graph Specification"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trugs-validate = "tools.validate:main"
trugs-memory = "tools.memory:main"
trugs-memory-render = "tools.memory_render:main"
trugs-memory-import = "tools.memory_import:main"
trugs-memory-audit = "tools.memory_audit:main"
trugs-tget = "tools.tget:main"
trugs-tupdate = "tools.tupdate:main"
trugs-tdelete = "tools.tdelete:main"
trugs-tunlink = "tools.tunlink:main"
trugs-trl = "tools.trl:main"
trugs-compliance-check = "tools.compliance_check:main"

[tool.setuptools.packages.find]
include = ["tools*"]
