[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trugs"
version = "2.0.0"
description = "TRUGS — Traceable Recursive Universal Graph Specification (spec-only since 2.0; install `trugs-tools` for the `trug` language CLI)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Layer-1 (industry baseline) tooling — AAA #2136 SP1. Spec-only repo: the only
# runtime code is tools/build_language_trug.py, so the dev set is the lint/type/test stack.
dev = [
    "ruff>=0.15",
    "mypy>=1.11",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/TRUGS-LLC/TRUGS"
Documentation = "https://github.com/TRUGS-LLC/TRUGS/blob/main/GETTING_STARTED.md"
Source = "https://github.com/TRUGS-LLC/TRUGS"
Issues = "https://github.com/TRUGS-LLC/TRUGS/issues"
Changelog = "https://github.com/TRUGS-LLC/TRUGS/blob/main/CHANGELOG.md"

# Spec-only distribution: the wheel ships metadata + spec pointers, no Python
# packages. tools/build_language_trug.py is a repo-side build utility, not
# consumer API (AAA #2472 Phase 9 R1-F2 — top-level `tools` collision hazard).
[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
